WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134961
[iOS] Fix touches inside accelerated overflow:scroll
https://bugs.webkit.org/show_bug.cgi?id=134961
Summary
[iOS] Fix touches inside accelerated overflow:scroll
Simon Fraser (smfr)
Reported
2014-07-15 19:43:43 PDT
[iOS] Fix touches inside accelerated overflow:scroll
Attachments
Patch
(3.58 KB, patch)
2014-07-15 19:47 PDT
,
Simon Fraser (smfr)
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-07-15 19:47:55 PDT
Created
attachment 234976
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-07-15 19:48:21 PDT
<
rdar://problem/16088789
>
Benjamin Poulain
Comment 3
2014-07-15 19:55:06 PDT
Comment on
attachment 234976
[details]
Patch I am not a fan, but it is not the right time for changing the architecture.
Simon Fraser (smfr)
Comment 4
2014-07-15 19:58:57 PDT
https://trac.webkit.org/r171132
Darin Adler
Comment 5
2014-07-16 18:02:55 PDT
Comment on
attachment 234976
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=234976&action=review
> Source/WebCore/rendering/RenderBox.cpp:2113 > +static inline bool shouldAppyContainersClipAndOffset(const RenderLayerModelObject* repaintContainer, RenderBox* containerBox)
Typo here: "Appy" instead of "Apply".
Simon Fraser (smfr)
Comment 6
2014-07-16 18:11:08 PDT
Fixed in
https://trac.webkit.org/r171163
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug